welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:4: error: reassignment to val
      die1 = 1
           ^withoutDoubles:6: error: value += is not a member of Int
      die1 += 1
           ^